--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,14 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: 'Hyper One Team'
+avatar: '/static/images/authors/hyper-one-team.jpg'
+occupation: 'AI & Automation Division'
+company: 'CÔNG TY TNHH HYPER ONE'
+email: 'info@hyperonevn.com'
+facebook: 'https://facebook.com/hyperonevn'
+youtube: 'https://youtube.com/@hyperonevn'
+linkedin: 'https://www.linkedin.com/company/hyperonevn'
+github: 'https://github.com/hyperonevn'
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
-
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Đội ngũ **HYPER ONE TEAM** gồm các kỹ sư, nhà thiết kế và chuyên gia AI đang xây dựng hệ sinh thái công nghệ phục vụ con người.  
+Chúng tôi không chỉ tạo ra sản phẩm, mà còn định hình tư duy mới về cách con người tương tác với AI.
