--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,6 +1,6 @@
 ---
 name: 'Hyper One Team'
-avatar: '/static/images/authors/hyper-one-team.jpg'
+avatar: '/static/images/avatar.png'
 occupation: 'AI & Automation Division'
 company: 'CÔNG TY TNHH HYPER ONE'
 email: 'info@hyperonevn.com'
@@ -11,4 +11,46 @@ github: 'https://github.com/hyperonevn'
 ---
 
 Đội ngũ **HYPER ONE TEAM** gồm các kỹ sư, nhà thiết kế và chuyên gia AI đang xây dựng hệ sinh thái công nghệ phục vụ con người.  
-Chúng tôi không chỉ tạo ra sản phẩm, mà còn định hình tư duy mới về cách con người tương tác với AI.
+Chúng tôi không chỉ tạo ra sản phẩm, mà còn định hình tư duy mới về cách con người tương tác với AI.  
+**Hyper One** là công ty công nghệ tiên phong trong lĩnh vực **AI, tự động hoá và nhà thông minh**,  
+với sứ mệnh kết nối giữa **công nghệ và con người**.  
+Chúng tôi tin rằng công nghệ chỉ có ý nghĩa khi giúp con người sống **thông minh hơn, tiện nghi hơn và hạnh phúc hơn**.
+
+---
+
+## 🌏 Tầm nhìn
+
+Hyper One tập trung xây dựng **hệ sinh thái AI hướng con người** — từ trợ lý ảo thông minh đến giải pháp tự động hoá toàn diện cho doanh nghiệp và gia đình.  
+Chúng tôi không chạy theo điều AI *có thể* làm, mà trung thành với điều AI *nên* làm:  
+**có đạo đức, có trách nhiệm và phục vụ cuộc sống.**
+
+---
+
+## ⚙️ Lĩnh vực hoạt động
+
+- **Hyper Cloud** – Nền tảng lưu trữ đám mây và tự động hoá an toàn  
+- **Hyper Bot** – Trợ lý AI dành cho doanh nghiệp nhỏ và nhà sáng tạo nội dung  
+- **Hyper Geo** – Tối ưu hoá công cụ tìm kiếm thế hệ mới (Generative Engine Optimization)  
+- **Hyper One Smart Home** – Giải pháp nhà thông minh tích hợp AI, kết nối Zigbee, Tuya, Aqara...  
+
+---
+
+## 💡 Sứ mệnh
+
+Hyper One cam kết tạo ra những sản phẩm **vừa mạnh mẽ về công nghệ, vừa gần gũi với con người**.  
+Từ không gian sống đến môi trường làm việc, AI của Hyper One được thiết kế để **tự động hoá thông minh mà vẫn giữ nguyên cảm xúc con người.**
+
+> “Chúng tôi không chạy theo điều AI *có thể* làm,  
+> mà trung thành với điều AI *nên* làm —  
+> có đạo đức, có trách nhiệm, vì con người.”
+
+---
+
+## 📞 Thông tin liên hệ
+
+**CÔNG TY TNHH HYPER ONE**  
+Mã số thuế: 0318921926 – Sở KHĐT TP.HCM  
+📞 0352 608068 – 0342 608068  
+✉️ info@hyperonevn.com  
+📍 68 Nguyễn Huệ, P. Sài Gòn, TP.HCM (Q.1 cũ)  
+📍 383 Nguyễn Duy Trinh, P. Bình Trưng, TP.HCM (Q.2 cũ)
