--- a/data/blog/agentic-ai-khi-mo-hinh-bat-au-biet-tu-lap-ke-hoach.mdx
+++ b/data/blog/agentic-ai-khi-mo-hinh-bat-au-biet-tu-lap-ke-hoach.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Agentic AI – Khi mô hình bắt đầu biết tự lập kế hoạch'
 date: '2023-06-18'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Giữa 2023, một ý tưởng vang lên như hồi chuông: mô hình AI không chỉ nên trả lời mà phải **hành động'
 ---
