--- a/data/blog/ai-ethics-operationalization-khi-ao-uc-ai-chuyen-tu-noi-suong-sang-hanh-ong.mdx
+++ b/data/blog/ai-ethics-operationalization-khi-ao-uc-ai-chuyen-tu-noi-suong-sang-hanh-ong.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI Ethics Operationalization – Khi đạo đức AI chuyển từ nói suông sang hành động'
 date: '2021-12-09'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trước 2021, đạo đức AI thường là câu chuyện hội nghị: những slide hoành tráng, những tuyên bố trách '
 ---
