--- a/data/blog/ai-marketplace-khi-mo-hinh-tro-thanh-san-pham-tac-tu-tro-thanh-dich-vu.mdx
+++ b/data/blog/ai-marketplace-khi-mo-hinh-tro-thanh-san-pham-tac-tu-tro-thanh-dich-vu.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI Marketplace – Khi mô hình trở thành sản phẩm, tác tử trở thành dịch vụ'
 date: '2024-04-10'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'GPT Store ra mắt và vài tuần sau đã có hàng triệu lượt kích hoạt ứng dụng AI do cộng đồng tạo ra. Cu'
 ---
