--- a/data/blog/assistants-api-ecosystem-khi-ai-tro-thanh-he-ieu-hanh-moi-cua-the-gioi-so.mdx
+++ b/data/blog/assistants-api-ecosystem-khi-ai-tro-thanh-he-ieu-hanh-moi-cua-the-gioi-so.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Assistants API & Ecosystem – Khi AI trở thành hệ điều hành mới của thế giới số'
 date: '2023-11-06'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Hồi tháng 11/2023, một tuyên bố gây chấn động giới công nghệ: AI không chỉ là chatbot nữa, mà là **h'
 ---
