--- a/data/blog/autogpt-khi-ai-tu-minh-len-ke-hoach-va-hanh-ong.mdx
+++ b/data/blog/autogpt-khi-ai-tu-minh-len-ke-hoach-va-hanh-ong.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AutoGPT – Khi AI tự mình lên kế hoạch và hành động'
 date: '2023-04-10'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một lập trình viên đăng tải một dự án nhỏ: AutoGPT. Chỉ trong vài ngày, hàng triệu người thử và kinh'
 ---
