--- a/data/blog/bigbird-va-cau-chuyen-thoat-khoi-chiec-long-nen-on2.mdx
+++ b/data/blog/bigbird-va-cau-chuyen-thoat-khoi-chiec-long-nen-on2.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'BigBird – Và câu chuyện thoát khỏi chiếc lồng nén O(n²)'
 date: '2020-10-25'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Transformer mạnh nhưng bị ràng buộc bởi O(n²): câu càng dài, máy càng “nghẹt thở”. Nhưng ngoài kia, '
 ---
