--- a/data/blog/chatgpt-va-khoanh-khac-ai-buoc-vao-oi-song-that.mdx
+++ b/data/blog/chatgpt-va-khoanh-khac-ai-buoc-vao-oi-song-that.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'ChatGPT và khoảnh khắc AI bước vào đời sống thật'
 date: '2023-01-15'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Cuối 2022 và đặc biệt đầu 2023, một hiện tượng bùng nổ: lần đầu tiên AI không còn là chuyện của phòn'
 ---
