--- a/data/blog/chinchilla-rule-khi-nganh-nhan-ra-mo-hinh-khong-chi-can-to-ma-can-hoc-u-du-lieu.mdx
+++ b/data/blog/chinchilla-rule-khi-nganh-nhan-ra-mo-hinh-khong-chi-can-to-ma-can-hoc-u-du-lieu.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Chinchilla Rule – Khi ngành nhận ra mô hình không chỉ cần to, mà cần học đủ dữ liệu'
 date: '2022-03-29'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Đầu 2022, cả thế giới AI đang chạy đua tăng số tham số: mô hình càng to càng được tung hô. Nhưng Dee'
 ---
