--- a/data/blog/clip-khi-ai-co-oi-mat-biet-oc.mdx
+++ b/data/blog/clip-khi-ai-co-oi-mat-biet-oc.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'CLIP – Khi AI có đôi mắt biết… đọc'
 date: '2021-03-04'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trong văn chương có câu: “Một bức tranh có thể nói hơn ngàn lời.” Nhưng với máy, hàng chục năm qua, '
 ---
