--- a/data/blog/clip-khi-ai-lan-au-nhin-va-hieu-bang-ngon-ngu-nguoi-noi.mdx
+++ b/data/blog/clip-khi-ai-lan-au-nhin-va-hieu-bang-ngon-ngu-nguoi-noi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'CLIP – Khi AI lần đầu nhìn và hiểu bằng ngôn ngữ người nói'
 date: '2021-01-05'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Ngày mà OpenAI công bố CLIP, cộng đồng AI như được chứng kiến mô hình “hai ngôn ngữ”: một mắt đọc hì'
 ---
