--- a/data/blog/codex-khi-ai-bat-au-oc-hieu-y-inh-lap-trinh-vien.mdx
+++ b/data/blog/codex-khi-ai-bat-au-oc-hieu-y-inh-lap-trinh-vien.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Codex – Khi AI bắt đầu đọc hiểu ý định lập trình viên'
 date: '2021-07-12'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một số người nhìn vào GPT-3 và nghĩ: “Hay đấy, nhưng nó vẫn chỉ là… văn bản.” OpenAI lại nhìn thấy m'
 ---
