--- a/data/blog/controlnet-khi-con-nguoi-kiem-soat-ai-thay-vi-bi-ai-cuon-i.mdx
+++ b/data/blog/controlnet-khi-con-nguoi-kiem-soat-ai-thay-vi-bi-ai-cuon-i.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'ControlNet – Khi con người kiểm soát AI thay vì bị AI cuốn đi'
 date: '2022-10-12'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Năm 2022, các mô hình tạo ảnh bắt đầu giống những nghệ sĩ… có cá tính quá mạnh. Người dùng mô tả một'
 ---
