--- a/data/blog/dalle-khi-ai-bat-au-tuong-tuong-thay-vi-chi-mo-ta.mdx
+++ b/data/blog/dalle-khi-ai-bat-au-tuong-tuong-thay-vi-chi-mo-ta.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'DALL·E – Khi AI bắt đầu tưởng tượng thay vì chỉ mô tả'
 date: '2021-01-05'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Đối với nhiều người trong ngành, DALL·E là cột mốc quan trọng: lần đầu tiên một mô hình AI **tưởng t'
 ---
