--- a/data/blog/dalle-khi-may-bat-au-ve-nhung-ieu-chua-tung-ton-tai.mdx
+++ b/data/blog/dalle-khi-may-bat-au-ve-nhung-ieu-chua-tung-ton-tai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'DALL·E – Khi máy bắt đầu vẽ những điều chưa từng tồn tại'
 date: '2021-01-05'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Nếu GPT-3 là nhà văn non nớt đang học cách kể chuyện, thì DALL·E giống đứa trẻ có trí tưởng tượng ho'
 ---
