--- a/data/blog/deberta-tai-sap-xep-ngu-nghia-e-hieu-nguoi-tot-hon.mdx
+++ b/data/blog/deberta-tai-sap-xep-ngu-nghia-e-hieu-nguoi-tot-hon.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'DeBERTa – Tái sắp xếp ngữ nghĩa để hiểu người tốt hơn'
 date: '2020-07-30'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Thỉnh thoảng trong nghiên cứu có những khoảnh khắc đơn giản nhưng thay đổi cục diện. Một kỹ sư Micro'
 ---
