--- a/data/blog/electra-khi-mo-hinh-hoc-tu-moi-ieu-no-thay.mdx
+++ b/data/blog/electra-khi-mo-hinh-hoc-tu-moi-ieu-no-thay.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'ELECTRA – Khi mô hình học từ mọi điều nó thấy'
 date: '2020-06-08'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Đầu năm 2020, các nhà nghiên cứu đã quen với việc che bớt từ trong câu rồi yêu cầu mô hình đoán lại '
 ---
