--- a/data/blog/flamingo-khi-ai-hoc-nhin-va-noi-ve-the-gioi-bang-mot-mach-suy-nghi.mdx
+++ b/data/blog/flamingo-khi-ai-hoc-nhin-va-noi-ve-the-gioi-bang-mot-mach-suy-nghi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Flamingo – Khi AI học nhìn và nói về thế giới bằng một mạch suy nghĩ'
 date: '2022-04-29'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một nhà nghiên cứu bắt đầu buổi thuyết trình bằng một bức ảnh: một chú mèo đội mũ sinh nhật, cạnh bá'
 ---
