--- a/data/blog/frontier-safety-khi-muc-tieu-khong-con-la-thong-minh-hon-ma-la-an-toan-hon.mdx
+++ b/data/blog/frontier-safety-khi-muc-tieu-khong-con-la-thong-minh-hon-ma-la-an-toan-hon.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Frontier Safety – Khi mục tiêu không còn là thông minh hơn, mà là an toàn hơn'
 date: '2024-01-10'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Đầu năm 2024, cộng đồng AI nhận ra: tốc độ phát triển mô hình đang vượt xa tốc độ chúng ta hiểu và k'
 ---
