--- a/data/blog/gpt-4-khi-tri-tue-nhan-tao-vuot-qua-nhung-bai-thi-cua-con-nguoi.mdx
+++ b/data/blog/gpt-4-khi-tri-tue-nhan-tao-vuot-qua-nhung-bai-thi-cua-con-nguoi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'GPT-4 – Khi trí tuệ nhân tạo vượt qua những bài thi của con người'
 date: '2023-03-14'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một buổi sáng tháng 3, bảng so sánh hiệu năng GPT-4 xuất hiện trên mạng và tạo ra cú sốc: mô hình vư'
 ---
