--- a/data/blog/guardrails-safety-layers-khi-con-nguoi-xay-hang-rao-bao-ve-truoc-suc-manh-ai.mdx
+++ b/data/blog/guardrails-safety-layers-khi-con-nguoi-xay-hang-rao-bao-ve-truoc-suc-manh-ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Guardrails & Safety Layers – Khi con người xây hàng rào bảo vệ trước sức mạnh AI'
 date: '2023-05-08'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Đầu 2023, công nghệ AI tiến nhanh đến mức xã hội lo sợ nó trở thành con dao hai lưỡi. Các tổ chức cô'
 ---
