--- a/data/blog/hallucination-mitigation-khi-nganh-hoc-cach-kiem-soat-ao-giac.mdx
+++ b/data/blog/hallucination-mitigation-khi-nganh-hoc-cach-kiem-soat-ao-giac.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Hallucination Mitigation – Khi ngành học cách kiểm soát ảo giác'
 date: '2023-09-05'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Suốt nhiều năm, AI có một thói quen kỳ quặc: khi không biết, nó… bịa. Nhưng giữa 2023, hạn chế ảo gi'
 ---
