--- a/data/blog/hybrids-neuro-symbolic-khi-ai-co-gang-co-ca-tri-lan-ly.mdx
+++ b/data/blog/hybrids-neuro-symbolic-khi-ai-co-gang-co-ca-tri-lan-ly.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Hybrids Neuro-Symbolic – Khi AI cố gắng có cả “trí” lẫn “lý”'
 date: '2021-11-03'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Có những câu hỏi làm AI bối rối không phải vì khó mà vì… cần suy luận logic. Ví dụ: “Nếu A lớn hơn B'
 ---
