--- a/data/blog/imagen-khi-ai-hoc-tham-my-va-tro-nen-biet-ep.mdx
+++ b/data/blog/imagen-khi-ai-hoc-tham-my-va-tro-nen-biet-ep.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Imagen – Khi AI học thẩm mỹ và trở nên “biết đẹp”'
 date: '2022-05-23'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một bức tranh do AI tạo ra khiến khán phòng ngỡ ngàng: ánh sáng mềm, bố cục cân chỉnh, chi tiết tinh'
 ---
