--- a/data/blog/lama-khi-ai-khai-quat-tri-thuc-an-trong-mo-hinh-ngon-ngu.mdx
+++ b/data/blog/lama-khi-ai-khai-quat-tri-thuc-an-trong-mo-hinh-ngon-ngu.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'LAMA – Khi AI khai quật tri thức ẩn trong mô hình ngôn ngữ'
 date: '2022-06-28'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một nhóm nghiên cứu đặt ra một câu hỏi kỳ lạ: “Trong đầu những mô hình ngôn ngữ đang có bao nhiêu tr'
 ---
