--- a/data/blog/make-a-video-khi-video-tuong-tuong-tro-thanh-su-that-tung-khung-hinh.mdx
+++ b/data/blog/make-a-video-khi-video-tuong-tuong-tro-thanh-su-that-tung-khung-hinh.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Make-A-Video – Khi video tưởng tượng trở thành sự thật từng khung hình'
 date: '2022-10-31'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Sau hình ảnh, bước tiếp theo tự nhiên phải là video. Meta tung Make-A-Video như một phép màu: nhập v'
 ---
