--- a/data/blog/midjourney-khi-cong-ong-tu-tay-inh-hinh-tuong-lai-nghe-thuat-ai.mdx
+++ b/data/blog/midjourney-khi-cong-ong-tu-tay-inh-hinh-tuong-lai-nghe-thuat-ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Midjourney – Khi cộng đồng tự tay định hình tương lai nghệ thuật AI'
 date: '2022-07-12'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Khác với những mô hình đóng kín phòng thí nghiệm, Midjourney xuất hiện trong tay cộng đồng sáng tạo.'
 ---
