--- a/data/blog/model-compression-on-device-ai-khi-ai-phai-buoc-ra-khoi-phong-may-chu.mdx
+++ b/data/blog/model-compression-on-device-ai-khi-ai-phai-buoc-ra-khoi-phong-may-chu.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Model Compression & On-device AI – Khi AI phải bước ra khỏi phòng máy chủ'
 date: '2021-11-20'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Vào năm 2021, ngày càng nhiều doanh nghiệp muốn AI chạy ngay trong điện thoại, kiosk, camera – nơi k'
 ---
