--- a/data/blog/multimodal-gpt-khi-ai-bat-au-oc-hinh-xem-video-va-hieu-the-gioi-nhu-chung-ta.mdx
+++ b/data/blog/multimodal-gpt-khi-ai-bat-au-oc-hinh-xem-video-va-hieu-the-gioi-nhu-chung-ta.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Multimodal GPT – Khi AI bắt đầu đọc hình, xem video và hiểu thế giới như chúng ta'
 date: '2023-10-02'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Cuối 2023, một kiểm thử đơn giản khiến cộng đồng choáng váng: người dùng chụp ảnh tủ lạnh của mình v'
 ---
