--- a/data/blog/open-weight-movement-khi-the-gioi-chon-mo-cua-thay-vi-khoa-lai.mdx
+++ b/data/blog/open-weight-movement-khi-the-gioi-chon-mo-cua-thay-vi-khoa-lai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Open-Weight Movement – Khi thế giới chọn mở cửa thay vì khóa lại'
 date: '2023-12-20'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Cả năm 2023 là cuộc rượt đuổi giữa các mô hình đóng và mở. Ở những tháng cuối năm, cộng đồng chứng k'
 ---
