--- a/data/blog/openai-voice-khi-loi-noi-tro-thanh-giao-dien-mac-inh.mdx
+++ b/data/blog/openai-voice-khi-loi-noi-tro-thanh-giao-dien-mac-inh.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'OpenAI Voice – Khi lời nói trở thành giao diện mặc định'
 date: '2024-03-05'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một video viral trên mạng: một người dùng trò chuyện với AI như đang gọi điện với bạn thân. AI cười,'
 ---
