--- a/data/blog/palm-khi-mo-hinh-bat-au-biet-giai-thich-tu-duy-cua-chinh-minh.mdx
+++ b/data/blog/palm-khi-mo-hinh-bat-au-biet-giai-thich-tu-duy-cua-chinh-minh.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'PaLM – Khi mô hình bắt đầu biết… giải thích tư duy của chính mình'
 date: '2022-04-04'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một kỹ sư thử thách PaLM bằng một bài toán logic nhỏ: “Nếu hôm nay là thứ Hai và 5 ngày nữa là thứ m'
 ---
