--- a/data/blog/pegasus-khi-mo-hinh-hoc-cach-tom-tat-nhu-nha-bao.mdx
+++ b/data/blog/pegasus-khi-mo-hinh-hoc-cach-tom-tat-nhu-nha-bao.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Pegasus – Khi mô hình học cách tóm tắt như nhà báo'
 date: '2020-08-20'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Báo chí cần tóm tắt. Con người cũng cần tóm tắt để sống sót mỗi ngày trong biển thông tin. Nhưng trư'
 ---
