--- a/data/blog/prompt-engineering-khi-cach-hoi-tro-thanh-chia-khoa-mo-tri-tue-ai.mdx
+++ b/data/blog/prompt-engineering-khi-cach-hoi-tro-thanh-chia-khoa-mo-tri-tue-ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Prompt Engineering – Khi cách hỏi trở thành chìa khóa mở trí tuệ AI'
 date: '2021-09-30'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Cuối 2021, nhiều kỹ sư ngồi trước màn hình và nhận ra một điều lạ lùng: cùng một câu hỏi, chỉ cần th'
 ---
