--- a/data/blog/rlhf-khi-ai-bat-au-hoc-tu-phan-hoi-cua-con-nguoi.mdx
+++ b/data/blog/rlhf-khi-ai-bat-au-hoc-tu-phan-hoi-cua-con-nguoi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'RLHF – Khi AI bắt đầu học từ phản hồi của con người'
 date: '2023-02-03'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trước 2023, mô hình ngôn ngữ chỉ học từ dữ liệu. Nhưng dữ liệu không dạy AI sự tử tế, không dạy cách'
 ---
