--- a/data/blog/sora-va-tuong-lai-ke-chuyen-ien-anh-bang-ai.mdx
+++ b/data/blog/sora-va-tuong-lai-ke-chuyen-ien-anh-bang-ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Sora và tương lai kể chuyện điện ảnh bằng AI'
 date: '2024-02-16'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Tháng 2/2024, Sora xuất hiện như “đạo diễn ảo” bước ra từ phim khoa học viễn tưởng. Người dùng nhập '
 ---
