--- a/data/blog/speech-to-speech-translation-khi-ngon-ngu-khong-con-rao-can-ky-thuat.mdx
+++ b/data/blog/speech-to-speech-translation-khi-ngon-ngu-khong-con-rao-can-ky-thuat.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Speech-to-Speech Translation – Khi ngôn ngữ không còn rào cản kỹ thuật'
 date: '2022-09-15'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Lần đầu tiên trong năm 2022, ai đó nói tiếng Tây Ban Nha, và AI không chỉ dịch sang tiếng Anh — nó *'
 ---
