--- a/data/blog/stable-diffusion-khi-sang-tao-tro-thanh-quyen-cua-so-ong.mdx
+++ b/data/blog/stable-diffusion-khi-sang-tao-tro-thanh-quyen-cua-so-ong.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Stable Diffusion – Khi sáng tạo trở thành quyền của số đông'
 date: '2022-08-22'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Tháng 8 năm 2022, một chuyện chưa từng có xảy ra: mô hình tạo ảnh chất lượng cao được đưa ra **mã ng'
 ---
