--- a/data/blog/switch-transformer-khi-van-e-khong-phai-kich-thuoc-ma-la-thong-minh.mdx
+++ b/data/blog/switch-transformer-khi-van-e-khong-phai-kich-thuoc-ma-la-thong-minh.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Switch Transformer – Khi vấn đề không phải kích thước, mà là… thông minh'
 date: '2021-01-11'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: '2021 chứng kiến một sự thật không dễ chấp nhận: mô hình càng lớn càng mạnh, nhưng chi phí huấn luyện'
 ---
