--- a/data/blog/switch-transformers-khi-mo-hinh-bat-au-hoc-cach-tiet-kiem-suc-manh-nao-bo.mdx
+++ b/data/blog/switch-transformers-khi-mo-hinh-bat-au-hoc-cach-tiet-kiem-suc-manh-nao-bo.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Switch Transformers – Khi mô hình bắt đầu học cách tiết kiệm sức mạnh não bộ'
 date: '2021-01-13'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Đầu năm 2021, giới NLP xôn xao với một câu hỏi kỳ lạ: “Liệu có phải mọi neuron trong một mô hình khổ'
 ---
