--- a/data/blog/synthetic-data-khi-ai-bat-au-tu-tao-du-lieu-e-huan-luyen-chinh-minh.mdx
+++ b/data/blog/synthetic-data-khi-ai-bat-au-tu-tao-du-lieu-e-huan-luyen-chinh-minh.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Synthetic Data – Khi AI bắt đầu tự tạo dữ liệu để huấn luyện chính mình'
 date: '2023-07-10'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một kỹ sư kể rằng họ đã hết dữ liệu chất lượng cao cho mô hình. Lúc đó, ý tưởng nổi lên: **để AI tự '
 ---
