--- a/data/blog/unifiedqa-mot-nao-bo-nhieu-nguon-kien-thuc.mdx
+++ b/data/blog/unifiedqa-mot-nao-bo-nhieu-nguon-kien-thuc.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'UnifiedQA – Một não bộ, nhiều nguồn kiến thức'
 date: '2020-09-18'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trong phòng nghiên cứu của AllenAI, một câu hỏi vang lên: “Tại sao hệ thống hỏi đáp phải bị nhốt vào'
 ---
