--- a/data/blog/video-generation-revolution-khi-ai-hoc-tao-chuyen-ong-chan-that-nhu-ien-anh.mdx
+++ b/data/blog/video-generation-revolution-khi-ai-hoc-tao-chuyen-ong-chan-that-nhu-ien-anh.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Video Generation Revolution – Khi AI học tạo chuyển động chân thật như điện ảnh'
 date: '2023-10-21'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một video ngắn lan truyền khắp Twitter: một con cáo robot chạy trong rừng, ánh nắng xuyên qua tán lá'
 ---
