--- a/data/blog/wav2vec-20-khi-ai-hoc-lang-nghe-chang-khac-gi-con-nguoi.mdx
+++ b/data/blog/wav2vec-20-khi-ai-hoc-lang-nghe-chang-khac-gi-con-nguoi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Wav2Vec 2.0 – Khi AI học lắng nghe chẳng khác gì con người'
 date: '2021-02-18'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trong một căn phòng thu, nhà nghiên cứu nhìn dãy sóng âm và băn khoăn: “Những đoạn im lặng, những âm'
 ---
