--- a/data/blog/codex-nguoi-ban-ong-hanh-moi-cua-lap-trinh-vien.mdx
+++ b/data/blog/codex-nguoi-ban-ong-hanh-moi-cua-lap-trinh-vien.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Codex – Người bạn đồng hành mới của lập trình viên'
 date: '2021-08-10'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một lập trình viên trẻ ngồi trước màn hình, nhìn chằm chằm đoạn code và thở dài: “Giá mà có ai đó hi'
 ---
