--- a/data/blog/gpt-3-va-thoi-iem-ca-the-gioi-nhan-ra-ai-co-giong-noi.mdx
+++ b/data/blog/gpt-3-va-thoi-iem-ca-the-gioi-nhan-ra-ai-co-giong-noi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'GPT-3 và thời điểm cả thế giới nhận ra AI có “giọng nói”'
 date: '2021-01-18'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Đầu 2021, những người từng trải qua cú sốc từ GPT-2 vẫn nghĩ rằng phải nhiều năm nữa chúng ta mới ch'
 ---
