--- a/data/blog/long-context-memory-khi-ai-bat-au-nho-cuoc-tro-chuyen-dai.mdx
+++ b/data/blog/long-context-memory-khi-ai-bat-au-nho-cuoc-tro-chuyen-dai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Long-context Memory – Khi AI bắt đầu “nhớ” cuộc trò chuyện dài'
 date: '2023-07-28'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Ngày trước, mỗi cuộc hội thoại với AI như đọc sách mà cứ bị lật lại trang đầu. Nhưng giữa 2023, khả '
 ---
