--- a/data/blog/model-collapse-khi-ai-oi-mat-nguy-co-tu-hoc-tu-chinh-ao-giac-cua-minh.mdx
+++ b/data/blog/model-collapse-khi-ai-oi-mat-nguy-co-tu-hoc-tu-chinh-ao-giac-cua-minh.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Model Collapse – Khi AI đối mặt nguy cơ tự học từ chính ảo giác của mình'
 date: '2023-11-19'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một bài nghiên cứu gây hoang mang lan truyền cuối 2023: nếu mô hình được huấn luyện từ dữ liệu do AI'
 ---
