--- a/data/blog/retrieval-augmented-generation-khi-ai-hoc-cach-tra-cuu-truoc-khi-tra-loi.mdx
+++ b/data/blog/retrieval-augmented-generation-khi-ai-hoc-cach-tra-cuu-truoc-khi-tra-loi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Retrieval-Augmented Generation – Khi AI học cách tra cứu trước khi trả lời'
 date: '2021-10-15'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Hãy tưởng tượng hai kiểu học sinh: một người nghĩ gì nói nấy, một người biết tra cứu sách rồi mới đư'
 ---
