--- a/data/blog/robotic-foundation-models-khi-ai-bat-au-cham-vao-the-gioi-vat-ly.mdx
+++ b/data/blog/robotic-foundation-models-khi-ai-bat-au-cham-vao-the-gioi-vat-ly.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Robotic Foundation Models – Khi AI bắt đầu chạm vào thế giới vật lý'
 date: '2024-03-25'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một video thử nghiệm gây chú ý: một robot tay cầm chiếc khăn lau bàn, tránh ly nước, điều chỉnh lực '
 ---
