--- a/data/blog/toolformer-khi-ai-tu-hoc-cach-su-dung-cong-cu.mdx
+++ b/data/blog/toolformer-khi-ai-tu-hoc-cach-su-dung-cong-cu.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Toolformer – Khi AI tự học cách sử dụng công cụ'
 date: '2023-08-14'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một thí nghiệm nghe có vẻ đơn giản: dạy mô hình gọi API khi gặp việc nó không biết. Nhưng Toolformer'
 ---
